syntax = "proto3";
option go_package = "github.com/shekhirin/zenly-task/zenly/pb/enricher";

package enricher;

message Transport {
  enum Type {
    TRANSPORT_CAR = 0;
    TRANSPORT_TRAIN = 1;
    TRANSPORT_PLANE = 2;
  }
  Type type = 1;
}
